Closed Bug 380461 Opened 17 years ago Closed 17 years ago

crash on imap login

Categories

(MailNews Core :: Networking: IMAP, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tuukka.tolvanen, Assigned: Bienvenu)

References

Details

(Keywords: crash)

Attachments

(2 files)

Attached file bt
trunk tbird linux
2007-05-10 08:00 PDT ok
2007-05-10 09:00 PDT crash, albeit a different stack at that time ;)
#8  0xb6c35ef3 in nsDependentCString (this=0xb18c6ea0, data=0x0)
    at ../../../../dist/include/string/nsTDependentString.h:89
No locals.
#9  0xb6e9bb08 in nsImapProtocol::ProcessAfterAuthenticated (this=0x91ce7b8)
    at /home/tt/src/moz/trunk/mozilla/mailnews/imap/src/nsImapProtocol.cpp:7314
	hasAdminUrl = 0

http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/mailnews/imap/src/nsImapProtocol.cpp&rev=1.653&mark=7312-7314#7298
Hmm, I wonder if we get a null string back from GetManageListsUrl, GetManageFiltersUrl or GetMailAccountUrl. Either way this should be fix. I'll take a look this morning.
Status: NEW → ASSIGNED
Same happens for Mac OS X. See bug 380585 or attachment 264686 [details] for a stack trace.
OS: Linux → All
Hardware: PC → All
Attached patch possible fixSplinter Review
I'm not entirely convinced this patch will fix the crash but it can't hurt. We may also need to protect against CreateNilString and CreateAString returning NULL.
Attachment #264749 - Flags: superreview?(bienvenu)
Comment on attachment 264749 [details] [diff] [review]
possible fix

yes, I've seen and fixed crashes for a similar reason (not in this code, though).
Attachment #264749 - Flags: superreview?(bienvenu) → superreview+
Tuukka, I've checked this in, can you update you tree in mailnews\imap and tell me if this fixes the problem for you? Thanks!
yeah, not crashing now :)
cool. marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: