Bug #380461 --> try to fix a crash on imap login by converting some char * uses to nsCString. sr=bienvenu